fix sun and moon